--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 
 </head>
 <body>
+<div id="contenedor2" style="width: 150px; height: 150px; background-color: red;">
     
-    <div class="contenedor">
-    <h3>Ingrese su correo</h3>
-    <input class="caja-texto" type="text" name="Correo" id="correo" required>
-    <h3>Ingrese su contraseña</h3>
-    <input class="caja-texto" type="text" name="contraseña" id="contraseña" required><br><br>
-    <button id="mi_boton">Enviar</button>
 </div>
+   
+<div class="contenedor_principal">
+    <h3>Ingrese su correo</h3>
+    <input class="caja-texto" id="imput1" type="text" name="Correo" id="correo" required>
+    <h3>Ingrese su contraseña</h3>
+    <input class="caja-texto" id="imput2" type="text" name="contraseña" id="contraseña" required>
+    <h3 id="resultado">Esperando mensaje</h3><br><br>
+    <button id="mi_boton">Enviar</button>
+    <button id="btn_color">Cambiar Color</button>
+</div>
+
  <script src="js/Script.js"></script>
 </body>
 </html>
